# optlib

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_cache.cpp  bench_lbfgs.cpp  bench_methods.cpp  bench_newton.cpp  bench_simd.cpp  functions.hpp
include/optlib/: optlib.hpp
include/optlib/core/: concepts.hpp  finite_diff.hpp  linesearch.hpp  result.hpp  simd.hpp  types.hpp
include/optlib/methods/: genetic.hpp  lbfgs.hpp  newton.hpp
tests/: CMakeLists.txt  test_core.cpp  test_genetic.cpp  test_lbfgs.cpp  test_linesearch.cpp  test_newton.cpp  test_simd.cpp
